[workspace]
members = [
    "crates/arch-reflector",
    "crates/arch-mirrors-rs",
    "crates/avatars",
    "crates/avatars_cli",
    "crates/connection-string-parser",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false }
duct = "0.13.6"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
