[package]
name = "arch-reflector"
version = "0.1.2"
description = "A rust implementation of the arch linux reflector package"
edition = "2021"
authors = ["IgnisDa <ignisda2001@gmail.com>"]
repository = "https://github.com/IgnisDa/rust-libs"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.68"
arch-mirrors-rs = { path = "../arch-mirrors-rs", version = "0.1.0" }
clap = { workspace = true }
clap-verbosity-flag = "2.0.0"
color-eyre = { workspace = true }
comfy-table = "6.1.3"
directories = "4.0.1"
hashbag = "0.1.9"
reqwest = "0.11.13"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }

