[package]
name = "avatars_cli"
description = "A command line interface for generating avatars"
version = "0.1.1"
edition = "2021"
authors = ["IgnisDa <ignisda2001@gmail.com>"]
repository = "https://github.com/IgnisDa/rust-libs"
license-file = "../../LICENSE.txt"
readme = "README.md"

[dependencies]

[[bin]]
name = "avatars"
path = "src/main.rs"
