[package]
name = "avatars"
description = "A library to generate SVG avatars from a seed string"
version = "0.1.3"
edition = "2021"
authors = ["IgnisDa <ignisda2001@gmail.com>"]
repository = "https://github.com/IgnisDa/rust-libs"
license = "MIT"
license-file = "../../LICENSE.txt"
readme = "README.md"

[dependencies]
itoa = "1.0.5"
