[package]
name = "avatars"
description = "A library to generate SVG avatars from a seed string"
version = "0.1.7"
edition = "2021"
authors = ["IgnisDa <ignisda2001@gmail.com>"]
repository = "https://github.com/IgnisDa/rust-libs"
license = "MIT"
readme = "README.md"

[dependencies]
itoa = "1.0.5"
strum = { version = "0.24.1", optional = true, features = ["derive"] }
