[package]
name = "avatars_cli"
description = "A command line interface for generating avatars"
version = "0.1.7"
edition = "2021"
authors = ["IgnisDa <ignisda2001@gmail.com>"]
repository = "https://github.com/IgnisDa/rust-libs"
license = "MIT"
readme = "README.md"

[dependencies]
avatars = { version = "0.1.5", path = "../avatars" }
clap = { workspace = true }
color-eyre = { workspace = true }

[dev-dependencies]
duct = { workspace = true }
