[package]
name = "connection-string-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
color-eyre = { version = "0.6.2", default-features = false }
url = "2.3.1"

[dev-dependencies]
duct = "0.13.6"

[[bin]]
name = "csp"
path = "src/main.rs"
