[package]
name = "connection-string-parser"
description = "A command line application to parse connection strings"
version = "0.2.5"
edition = "2021"
authors = ["IgnisDa <ignisda2001@gmail.com>"]
repository = "https://github.com/IgnisDa/rust-libs"
license-file = "../../LICENSE.txt"
readme = "README.md"

[dependencies]
clap = { workspace = true }
color-eyre = { version = "0.6.2", default-features = false }
url = "2.3.1"

[dev-dependencies]
duct = "0.13.6"
