[package]
name = "connection-string-parser"
description = "A command line application to parse connection strings"
version = "0.3.3"
edition = "2021"
authors = ["IgnisDa <ignisda2001@gmail.com>"]
repository = "https://github.com/IgnisDa/rust-libs"
license = "../../LICENSE.txt"
readme = "README.md"

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
url = "2.3.1"

[dev-dependencies]
duct = { workspace = true }
