[package]
name = "reflector"
version = "0.1.0"
description = "A rust implementation of the arch linux reflector package"
edition = "2021"
authors = ["IgnisDa <ignisda2001@gmail.com>"]
repository = "https://github.com/IgnisDa/rust-libs"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
