[package]
name = "reflector"
version = "0.1.0"
description = "A rust implementation of the arch linux reflector package"
edition = "2021"
authors = ["IgnisDa <ignisda2001@gmail.com>"]
repository = "https://github.com/IgnisDa/rust-libs"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { workspace = true }
clap-verbosity-flag = "2.0.0"
color-eyre = { workspace = true }
reqwest = "0.11.13"
tokio = { version = "1.23.0", features = ["full"] }
